Implement WASM support for the logic puzzle game, enabling dual-version functionality for both desktop (Tauri) and web (WASM) environments. Add necessary configurations, dependencies, and hooks to facilitate seamless integration. Update the App component to utilize the new command detection system, ensuring automatic environment detection and appropriate command usage. Include comprehensive documentation for setup and deployment.

--- a/logic_core/Cargo.toml
+++ b/logic_core/Cargo.toml
@@ -6,9 +6,21 @@ authors.workspace = true
 license.workspace = true
 rust-version = "1.85"
 
+[lib]
+crate-type = ["cdylib", "rlib"]  # cdylib用于WASM，rlib用于普通库
+
 [dependencies]
 serde.workspace = true
 serde_json.workspace = true
 rand.workspace = true
+
+# WASM依赖
+wasm-bindgen = "0.2"
+serde-wasm-bindgen = "0.6"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1"  # WASM错误信息改进
+wasm-bindgen-futures = "0.4"      # 异步支持
+getrandom = { version = "0.3", features = ["wasm_js"] }  # rand需要的随机源（注意：0.3用wasm_js）
 
 [dev-dependencies]
